--- a/accounts-qa.yml
+++ b/accounts-qa.yml
@@ -2,7 +2,7 @@ build:
   version: "2.0"  
 
 accounts:
-  message: "Welcome to Account microservice related to qa environment"
+  message: "Welcome to Account microservice related to qa environments"
   contactDetails:
     name: "Ankit QA lead"
     email: "ankit88@gmail.com"
